<resources>
    <string name="app_name">VoteAndEat</string>
    <string name="title_activity_home">VoteAndEat</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_view_directions">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_votes">Votes</string>
    <string name="nav_favs">Favorites</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rest">Restaurants</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_user">My Profile</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_maps">Maps</string>
</resources>
