<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ichome"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_votes"
            android:icon="@drawable/icvote"
            android:title="@string/nav_votes" />
        <item
            android:id="@+id/nav_favs"
            android:icon="@drawable/icfav"
            android:title="@string/nav_favs" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/icrest"
            android:title="@string/nav_rest" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icsettings"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="User">
        <menu>
            <item
                android:id="@+id/nav_user"
                android:icon="@drawable/icprofile"
                android:title="@string/nav_user" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/iclogout"
                android:title="@string/nav_logout" />
        </menu>
    </item>

</menu>
